--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>Recipe App</h1>
+            <form>
+                <input type="text" class="searchBox" placeholder="Search for a recipe">
+                <button type="submit" class="searchBtn">search</button>
+            </form>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="recipe-cont">
+                <h2>seach your favourite recipe</h2>
+            </div>
+            <div class="recipe-details">
+                <button class="btn-close"><i class="fa-solid fa-xmark"></i></button>
+                <div class="recipe-details-cont"></div>
+            </div>
+        </section>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
